--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.6.3ubuntu) trusty; urgency=medium
+
+  * Added Kepler IC10 for FCDB.
+
+ -- Akito TAJITSU <tajitsu@naoj.org>  Thu, 25 Oct 2018 20:23:34 -1000
+
 hskymon (3.6.2ubuntu) trusty; urgency=medium
 
   * Added HSC masking area plot in FC with GAIA search.
