--- a/hskymon.1
+++ b/hskymon.1
@@ -4,7 +4,8 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH HSKYMON 1 "March 8, 2018"
+.IX Title "HSKYMON 1"
+.TH HSKYMON 1 "March 11, 2019" "3.8.0" "User Manuals"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
