Markup text style is applied

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2019.03.31 ver3.8.1 - Database updated SDSS DR14 --> DR15 .
+	            - Markup text style is applied to label and
+	              tree_view_column.
+                    - Added
+	                gtkut.c   gtkut.h
+                    - Revised SSL_connect() in http-client.c
+
 2019.03.11 ver3.8.0 - LGS PAM (satellite collision data) plot functions for
 	              IRCS obs (imported fromhoe).
                       In hskymon PAM data can be imported before/after object
