--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.8.1ubuntu) bionic; urgency=medium
+
+  * Markup text style is applied.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Sat, 30 Mar 2019 19:56:05 -1000
+
 hskymon (3.8.0ubuntu) bionic; urgency=medium
 
   * Added LGS PAM (satellite conllision) data plot functions.
