--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019.04.02 ver3.8.2 - Bug fix for Gtk+3 ver.
+                      removed editable=FALSE for spin_button.
+                      Fixed inappropriate default font name.
+
 2019.03.31 ver3.8.1 - Database updated SDSS DR14 --> DR15 .
 	            - Markup text style is applied to label and
 	              tree_view_column.
