Revised for Gen2 RO server namereference

--- a/README
+++ b/README
@@ -83,6 +83,20 @@ to make this program.
      -l, --log [log-file]          : Output log file
 
 
+*** XMLRPC
+If you compiled hskymon with "xmlrpc" option, hskymon can get the current
+telescope status from Subaru Gen2 server (effective only in the Subaru
+summit network.)
+In this case, you should set the address of Gen2 status server
+ [1] by a commandline option "-s" (or "--server")
+       % hskymon -s status.server.address.foo.bar
+or
+ [2] by an environment variable  "GEN2_RO_NAMSERVER"
+. The environment variable [2] yields to the command line option [1].
+If either [1] or [2] is found in the start up, hskymon aborts to communicate
+with the status server.
+
+
 *** Input files
 [1]OPE file
 OPE files for SOSs can be available for objects inputs.
