--- a/hskymon.1
+++ b/hskymon.1
@@ -51,7 +51,7 @@ Output log file.
 Disconnect from Telstat Server (only compiled w/XMLRPC option).
 .TP
 .B \-s, \-\-server [server\-address]
-Override Telstat Server (only compiled w/XMLRPC option).
+Set Gen2 Telstat Server (only compiled w/XMLRPC option).
 
 .SH INPUT FILES
 .TP
