--- a/README.jp
+++ b/README.jp
@@ -94,6 +94,14 @@ macOS, Windowsのバイナリー配布版には必要なライブラリはすべて同梱されています
 あります。
  (xmlrpc-c, xmlrpc-c-devel 等)
 現在のところWindows/Mac版はこの機能には対応していません。
+Gen2で起動する場合は
+  [1]  コマンドラインオプション "-s" (または"--server")の中
+    % hskymon -s status.server.address.foo.bar
+または
+  [2]  環境変数  GEN2_RO_NAMSERVER
+でステータスサーバーのアドレスを指定する必要があります。
+オプションでの指定の方が優先されます。
+どちらの指定もない場合はステータスサーバーとの交信はおこないません。
 
 
 
