--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.8.4ubuntu) bionic; urgency=medium
+
+  * 
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Wed, 06 Nov 2019 19:50:18 -1000
+
 hskymon (3.8.3ubuntu) bionic; urgency=medium
 
   * Revised for Non-sidereal targets (Autoload, FC etc.).
