--- a/README.jp
+++ b/README.jp
@@ -98,7 +98,7 @@ Gen2で起動する場合は
   [1]  コマンドラインオプション "-s" (または"--server")の中
     % hskymon -s status.server.address.foo.bar
 または
-  [2]  環境変数  GEN2_RO_NAMSERVER
+  [2]  環境変数  GEN2_RO_SERVER
 でステータスサーバーのアドレスを指定する必要があります。
 オプションでの指定の方が優先されます。
 どちらの指定もない場合はステータスサーバーとの交信はおこないません。
