--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2019.11.06 ver3.8.4 - Added Non-Sidereal Check in HSC style OPE files.
                     - Revised to get Gen2 status server address from
                         [1] command line option "-s"
-	                [2] environment variable "GEN2_RO_NAMSERVER"
+	                [2] environment variable "GEN2_RO_SERVER"
                        (priority [1] > [2])
                     - Reomoved the status server address setup in "~/.hskymon".
 
