Added UCAC4 for FCDB and MagDB

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2019.11.26 ver3.8.5 - Added UCAC4 for FCDB and MagDB.
+                    - Updated PanSTARRS-1 server to the latest MAST server.
+
 2019.11.06 ver3.8.4 - Added Non-Sidereal Check in HSC style OPE files.
                     - Revised to get Gen2 status server address from
                         [1] command line option "-s"
