--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hskymon (3.8.6ubuntu) bionic; urgency=medium
+
+  * Re-Added old PanSTARRS server in StSci (as default).
+  * Updated GSC catalog v2.3 -> v2.4.1
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Wed, 27 Nov 2019 13:11:16 -1000
+
 hskymon (3.8.5ubuntu) bionic; urgency=medium
 
   * Added UCAC4 for FCDB and MagDB.
