Revised downloading popup messages in FCDB search

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2019.12.25 ver4.0.1 - Revised downloading popup messages in FCDB search.
+
 2019.12.24 ver4.0.0 - Bug fix on target addtion from FCDB to Main Target list.
                     - Added "PM" button in Object LIst to search proper
 	              motions of targets.
