--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.0.1ubuntu) bionic; urgency=medium
+
+  * Revised downloading popup messages in FCDB search.
+
+ -- Akito Tajitsu <tajiysu@naoj.org>  Wed, 25 Dec 2019 15:25:07 -1000
+
 hskymon (4.0.0ubuntu) bionic; urgency=medium
 
   * Revised all multi-thread process into glib based ones.
