--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2019.01.03 ver4.0.2 - Added Transient Name Server in Addobj search & WWWDB.
+
 2019.12.26 ver4.0.1 - Revised downloading popup messages in FCDB search.
                     - Added g_thread_join() after threads finished.
 
@@ -6,7 +8,7 @@
 	              motions of targets.
 	            - Added SSL access mode to get All Sky Camera image.
                     - Revised code to set Obs/AllSky Cam parameters.
-                    - Revised all multi-thread process into glib based ones. 
+                    - Revised all multi-thread process into glib based ones.
 
 2019.11.27 ver3.8.6 - Re-Added old PanSTARRS server in StSci (as default).
                       (MAST server is slow and unstable with large FOVs).
