--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.0.2ubuntu) bionic; urgency=medium
+
+  * Added Transient Name Server in Addobj search & WWWDB.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Fri, 03 Jan 2020 16:41:56 -1000
+
 hskymon (4.0.1ubuntu) bionic; urgency=medium
 
   * Revised downloading popup messages in FCDB search.
