--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020.09.07 ver4.0.5 - Changed ASIVA's address to https.
+                    - Revised https access for allsky cam images.
+
 2020.08.18 ver4.0.4 - Added SWIMS into the FC instruments
 	              PA is temporary (N-up = 0 and should be fixed
 	              in observations).
