--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.0.5ubuntu) bionic; urgency=medium
+
+  * Revised https access for allsky images.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Mon, 07 Sep 2020 05:01:43 -1000
+
 hskymon (4.0.4ubuntu) bionic; urgency=medium
 
   * Added SWIMS into the FC instruments.
