--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2020.09.24 ver4.0.6 - Bug fix for TSC files auto loading.
+
 2020.09.07 ver4.0.5 - Changed ASIVA's address to https.
                     - Revised https access for allsky cam images.
 
