--- a/README
+++ b/README
@@ -3,9 +3,9 @@
 #                         Document file
 #
 #
-#                                  ver 4.0.6    2020/09/24
-#                               Copyright (C) 2003-20 Akito Tajitsu
-#                                               tajitsu_at_naoj.org
+#                                  ver 4.1.0    2021/01/??
+#                               Copyright (C) 2003-21 Akito Tajitsu
+#                                        akito.tajitsu_at_nao.ac.jp
 #      Subaru Telescope, National Astronomical Observatory of Japan
 #########################################################################
 
