--- a/hskymon.1
+++ b/hskymon.1
@@ -5,7 +5,7 @@
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
 .IX Title "HSKYMON 1"
-.TH HSKYMON 1 "Sep 24, 2020" "4.0.6" "User Manuals"
+.TH HSKYMON 1 "Jan ??, 2021" "4.1.0" "User Manuals"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
