--- a/hskymon.1
+++ b/hskymon.1
@@ -1,11 +1,11 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.\" (C) Copyright 2018 Akito Tajitsu <tajitsu@naoj.org>,
+.\" (C) Copyright 2018 Akito Tajitsu <akito.tajitsu@nao.ac.jp>,
 .\"
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
 .IX Title "HSKYMON 1"
-.TH HSKYMON 1 "Jan ??, 2021" "4.1.0" "User Manuals"
+.TH HSKYMON 1 "Jan 25, 2021" "4.1.0" "User Manuals"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -127,7 +127,7 @@ From the main menu, HORIZONS files can be converted into the TSC format.
 
 .SH "AUTHOR"
 .nf
-Akito Tajitsu	<tajitsu@naoj.org>
+Akito Tajitsu	<akito.tajitsu@nao.ac.jp>
 .br
   URL:   http://www.naoj.org/Observing/tools/hskymon
 .fi
