--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.2.0ubuntu) bionic; urgency=medium
+
+  * Revised for KOOLS/Seimei telescope.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Tue, 23 Mar 2021 21:06:19 +0900
+
 hskymon (4.1.0ubuntu) bionic; urgency=medium
 
   * Added telescope azimuth mode (N=0 or S=0).
