--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.3.1ubuntu) bionic; urgency=medium
+
+  * Fixed a bug in XMLRPC mode.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Tue, 27 Apr 2021 11:00:43 +0900
+
 hskymon (4.3.0ubuntu) bionic; urgency=medium
 
   * Added IRD and TriCCS for FC.
