--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.3.2ubuntu) bionic; urgency=medium
+
+  * Added an acces to Subaru Allsky Image.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Fri, 11 Jun 2021 11:19:31 +0900
+
 hskymon (4.3.1ubuntu) bionic; urgency=medium
 
   * Fixed a bug in XMLRPC mode.
