--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2021.06.11 ver4.3.3 - A bug fix on memory release for broken all sky images.
+
 2021.06.11 ver4.3.2 - Added Subaru's All Sky Image
 	              (just for testing / Subaru inside only).
                      - A bug fix for all sky image flipping.
