--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.3.3ubuntu) bionic; urgency=medium
+
+  * A bug fix on memory release for broken all sky images.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Fri, 11 Jun 2021 19:47:02 +0900
+
 hskymon (4.3.2ubuntu) bionic; urgency=medium
 
   * Added an acces to Subaru Allsky Image.
