--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,17 @@
-2023.02.14 ver4.4.1 - Bug fix for compling w/Ubuntu 22.04LTS.
-                    - Change accessing to databases
+2023.02.14 ver4.4.1 - Bug fix for compling w/Ubuntu 22.04LTS (GCC10).
+                    - Updated accessing to databases
 	                 HST archive
 	                 Kepler archive
 	                 DSS via STSci
 	                 DSS via ESO arhive
-	            - Added TRDB acces delay.
+	                 LAMOST DR7 & DR8
+	            - Updated accessing to FC image servers
+	                 STSci (DSS)
+	                 ESO (DSS)
+	            - Added TRDB acces delay (for SMOKA from inside of NAOJ).
+                    - AllSkyCamera access via http proxy (udeer testing).
+                    - Status monitoring for the 3.8-m Seimei telescope.
+	                 (under testing).
 
 2021.06.14 ver4.3.4 - Changed the limit size of all sky images to 1200 pix.
 	            - Automatic rescale of X, Y, and d of all sky iamges over
