--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2023.02.28 ver4.5.1 - Added a new function to access to Seimei Telescope
+	              Status Server.
+
 2023.02.22 ver4.5.0 - Proxy access for all HTTP/HTTPS connections.
 
 2023.02.14 ver4.4.1 - Bug fix for compling w/Ubuntu 22.04LTS (GCC10).
