--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hskymon (4.5.1ubuntu) bionic; urgency=medium
+
+  * Added a new function to show Seimei Telescope status.
+  * Added HTTP / HTTPS connection timeout.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Wed, 01 Mar 2023 23:22:48 +0900
+
 hskymon (4.5.0ubuntu) bionic; urgency=medium
 
   * Change accessing to databases (HST) etc.
