--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.5.2ubuntu) bionic; urgency=medium
+
+  * Bug fix on HTTP access.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Tue, 22 Aug 2023 20:51:35 +0900
+
 hskymon (4.5.1ubuntu) bionic; urgency=medium
 
   * Added a new function to show Seimei Telescope status.
