--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2023.08.24 ver4.5.5 - NonBlocking recv (only for HTTP access).
+
 2023.08.23 ver4.5.4 - Test for macOS recv() packet size #2.
 
 2023.08.23 ver4.5.3 - Test for macOS recv() packet size.
