--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023.08.25 ver4.5.6 - NonBlocking recv and SSL_read for all HTTP/HTTPS accesses.
+                    - Catalog updates for FC (SDSS DR18) and FCDB (SDSS DR16,
+	              GSC, 2MASS etc.)
+
 2023.08.24 ver4.5.5 - NonBlocking recv (only for HTTP access).
 
 2023.08.23 ver4.5.4 - Test for macOS recv() packet size #2.
