--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hskymon (4.5.6ubuntu) bionic; urgency=medium
+
+  * NonBlocking recv and SSL_read for all HTTP/HTTPS accesses.
+  * Catalog updates for FC and FCDB.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Fri, 25 Aug 2023 13:43:20 +0900
+
 hskymon (4.5.4ubuntu) bionic; urgency=medium
 
   * Test for macOS recv #2.
