--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2023.08.25 ver4.5.7 - Bug fix for SDSS FCDB.
+
 2023.08.25 ver4.5.6 - NonBlocking recv and SSL_read for all HTTP/HTTPS accesses.
                     - Catalog updates for FC (SDSS DR18) and FCDB (SDSS DR16,
 	              GSC, 2MASS etc.)
