--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (4.5.7ubuntu) bionic; urgency=medium
+
+  * Bug fix for SDSS FCDB.
+
+ -- Akito Tajitsu <akito.tajitsu@nao.ac.jp>  Fri, 25 Aug 2023 20:56:53 +0900
+
 hskymon (4.5.6ubuntu) bionic; urgency=medium
 
   * NonBlocking recv and SSL_read for all HTTP/HTTPS accesses.
